# gudev-rs

./: .gitmodules  .travis.yml  Cargo.toml  Gir.toml  Makefile  NEWS  README.md
.github/workflows/: CI.yml
gudev/: Cargo.toml  Gir.toml  README.md
gudev-sys/: Cargo.toml  Gir.toml  Makefile  NEWS  build.rs
gudev-sys/src/: lib.rs
gudev-sys/tests/: abi.rs  constant.c  layout.c
gudev/examples/: enumerator.rs  monitor.rs
gudev/src/: lib.rs
gudev/src/auto/: client.rs  device.rs  enumerator.rs  enums.rs  mod.rs
gudev/sys/: Cargo.toml  Gir.toml  LICENSE  NEWS  build.rs
gudev/sys/src/: lib.rs
gudev/sys/tests/: abi.rs  constant.c  layout.c  manual.h
src/: lib.rs
src/auto/: client.rs  device.rs  enumerator.rs  enums.rs  flags.rs  mod.rs
