[package]
authors = ["Hubert Figuière <hub@figuiere.net>"]
build = "build.rs"
links = "gudev"
name = "gudev-sys"
version = "0.2.0"
description = "Rust ffi interface for gudev, the glib support library for libudev."
license = "MIT"
homepage = "https://github.com/hfiguiere/gudev-rs"
repository = "https://github.com/hfiguiere/gudev-rs"

keywords = ["ffi", "udev", "glib"]

[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
bitflags = "0.4"
libc = "0.2"

[dependencies.glib-sys]
version="0.4.0"

[dependencies.gobject-sys]
version="0.4.0"

[features]

[lib]
name = "gudev_sys"
