[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
bitflags = "0.9"
libc = "0.2"

[dependencies.glib-sys]
version = "0.4.0"

[dependencies.gobject-sys]
version = "0.4.0"

[features]

[lib]
name = "gudev_sys"

[package]
authors = ["Hubert Figuière <hub@figuiere.net>"]
build = "build.rs"
description = "Rust ffi interface for gudev, the glib support library for libudev."
homepage = "https://github.com/hfiguiere/gudev-rs"
keywords = ["ffi", "udev", "glib"]
license = "MIT"
links = "gudev"
name = "gudev-sys"
repository = "https://github.com/hfiguiere/gudev-rs"
version = "0.2.0"
