[package]
name = "gudev"
version = "0.16.0"
authors = ["Hubert Figuière <hub@figuiere.net>"]
description = "Rust API for gudev, the glib support library for libudev."
license = "MIT"
homepage = "https://github.com/hfiguiere/gudev-rs"
repository = "https://github.com/hfiguiere/gudev-rs"
keywords = ["ffi", "udev", "glib"]
edition = "2021"

[dependencies]
libc = "0.2"
ffi = { package = "gudev-sys", version = "^0.13.0", path = "sys" }
glib = { version = "^0.19.0" }
