[build-dependencies]
pkg-config = "0.3.7"
system-deps = "6"

[dependencies]
bitflags = "1.0"
libc = "0.2"

[dependencies.glib]
version = "^0.18.0"
package = "glib-sys"

[dependencies.gobject]
version = "^0.18.0"
package = "gobject-sys"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = []

[lib]
name = "gudev_sys"

[package]
authors = ["Hubert Figuière <hub@figuiere.net>"]
build = "build.rs"
description = "Rust ffi interface for gudev, the glib support library for libudev."
homepage = "https://github.com/hfiguiere/gudev-rs"
keywords = ["ffi", "udev", "glib"]
license = "MIT"
links = "gudev"
name = "gudev-sys"
repository = "https://github.com/hfiguiere/gudev-rs"
version = "0.12.0"
edition = "2021"

[package.metadata.system-deps.gudev_1_0]
name = "gudev-1.0"
version = "230"

[package.metadata.docs.rs]
features = ["dox"]
