[package]
authors = ["Hubert Figuière <hub@figuiere.net>"]
build = "build.rs"
description = "Rust ffi interface for gudev, the glib support library for libudev."
homepage = "https://github.com/hfiguiere/gudev-rs"
keywords = ["ffi", "udev", "glib"]
license = "MIT"
links = "gudev"
name = "gudev-sys"
repository = "https://github.com/hfiguiere/gudev-rs"
version = "0.13.1"
edition = "2021"

[package.metadata.system-deps.gudev_1_0]
name = "gudev-1.0"
version = "230"

[package.metadata.docs.rs]
features = ["dox"]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
version = "^0.19.0"

[dependencies.gobject-sys]
version = "^0.19.0"

[build-dependencies]
pkg-config = "0.3.7"
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = []

[lib]
name = "gudev_sys"
